# quant-copilot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  redis_client.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  backtest.py  llm_call.py  price.py  research_note.py  strategy.py  ticker.py
backend/app/routes/: backtest.py  health.py  research.py  tickers.py
backend/app/schemas/: research.py
backend/app/services/: backtest_engine.py  data_ingestion.py  llm_research.py  strategies.py
backend/app/tasks/: backtest_tasks.py  celery_app.py
backend/tests/: conftest.py  test_backtest_engine.py  test_data_ingestion.py  test_llm_research.py  test_smoke.py
docs/design/: 00-overview.md  01-architecture.md  02-data-model.md  03-api-contract.md
docs/design/adr/: 0001-monorepo-vs-polyrepo.md  0002-postgres-not-timeseries-db.md  0003-celery-for-async-tasks.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/research/: page.tsx
frontend/app/ticker/: page.tsx
frontend/lib/: api.ts
skills/quant-backtest-lab/: SKILL.md  requirements.txt
skills/quant-backtest-lab/scripts/: backtest.py
skills/ticker-research-lab/: SKILL.md  requirements.txt
skills/ticker-research-lab/scripts/: research.py
