[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-copilot-backend"
version = "0.0.1"
description = "AI quant research platform backend"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "celery>=5.3",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "anthropic>=0.30",
    # Data sources
    "yfinance>=0.2",
    "akshare>=1.10",
    "pandas>=2.0",
    "numpy>=1.24",
    # Backtest
    "vectorbt>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
